<resources>
    <string name="app_name">Quiz Bandeiras</string>
    <string name="desc_bandeira">Bandeira do país a ser adivinhado</string>
    <string name="dialog_sair_mensagem">Sair abandonará seu progresso, tem certeza?</string>
    <string name="dialog_sair_sim">Sim!</string>
    <string name="dialog_sair_nao">Eita preula! Não!</string>
    <string name="jogar">Jogar!</string>
    <string name="devs">Desenvolvedores</string>
    <string name="hint_nome_jogador">Digite seu nome</string>
    <string name="desc_icone_jogador">Ícone do jogador selecionado</string>
    <string name="desc_trocar_icone">Trocar ícone do jogador</string>
    <string name="desc_voltar">Voltar para o menu principal</string>
    <string name="desc_foto_felipe">Foto de Felipe Neres Vieira</string>
    <string name="desc_foto_victor">Foto de Victor Oliveira</string>
    <string name="confirmar">Confirmar</string>
    <string name="desc_sair_partida">Sair da partida</string>
    <string name="titulo_resultado">Pontuação</string>
    <string name="label_pontos">Pontos:</string>
    <string name="menu">Menu</string>
    <string name="qual_pais">Que país é esse?</string>
    <string name="conf_resposta">Confirmar resposta</string>
    <string name="tent_novamente">Tentar novamente</string>
    <string name="sair_menu">Menu principal</string>
    <string name="pontuacao_formato">%1$d/10</string>
    <string name="rodada_formato">%1$d/%2$d</string>
    <string name="sair">Sair</string>
    <string name="cargo_desenvolvedor">\"Desenvolvedor\"</string>
    <string name="nome_dev_felipe">\"Felipe Neres Vieira\"</string>
    <string name="nome_dev_victor">\"Victor Oliveira\"</string>
    <string name="rgm_felipe">\"RGM: 44076916\"</string>
    <string name="rgm_victor">\"RGM: 42080657\"</string>
</resources>